[project]
name = "dex-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dipdup>=8.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "black>=25.1.0",
    "ssort>=0.14.0",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 140
target-version = 'py312'

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP", "NPY"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "single" }
isort = { force-single-line = true }

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.black]
line-length = 140
target-version = ['py312']
skip-string-normalization = true
